--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,6 @@ UpgradeLog*.htm
 FakesAssemblies/
 
 # Config protection
-WRIO\Web.config
-WRIO\Web.Debug.config
-WRIO\Web.Release.config
+WRIO/Web.Debug.config
+WRIO/Web.Release.config
+WRIO/Web.config
