--- a/WRIO/WRIO.csproj
+++ b/WRIO/WRIO.csproj
@@ -100,15 +100,6 @@
     <Reference Include="log4net">
       <HintPath>..\Dlls\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="Login.Business">
-      <HintPath>..\Dlls\Login.Business.dll</HintPath>
-    </Reference>
-    <Reference Include="Login.Repository">
-      <HintPath>..\Dlls\Login.Repository.dll</HintPath>
-    </Reference>
-    <Reference Include="Login.Services">
-      <HintPath>..\Dlls\Login.Services.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.WebPages.OAuth, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="PayPalCoreSDK">
@@ -193,6 +184,9 @@
     <Reference Include="Titter">
       <HintPath>..\Dlls\Titter.dll</HintPath>
     </Reference>
+    <Reference Include="UserAccount">
+      <HintPath>..\Dlls\UserAccount.dll</HintPath>
+    </Reference>
     <Reference Include="webGold.Business">
       <HintPath>..\Dlls\webGold.Business.dll</HintPath>
     </Reference>
@@ -228,16 +222,8 @@
     <Compile Include="api\CoreUserAppsController.cs" />
     <Compile Include="api\CoreUserParamsController.cs" />
     <Compile Include="api\LastTransactionController.cs" />
-    <Compile Include="api\LoginController.cs" />
-    <Compile Include="api\LoginResetPasswordController.cs" />
-    <Compile Include="api\LoginSignInController.cs" />
-    <Compile Include="api\PasswordController.cs" />
     <Compile Include="api\PayPalController.cs" />
     <Compile Include="api\PayPalWithdrawController.cs" />
-    <Compile Include="api\ProfileCheckEmailController.cs" />
-    <Compile Include="api\ProfileGuestloginController.cs" />
-    <Compile Include="api\ProfileRegistrationController.cs" />
-    <Compile Include="api\SignOutController.cs" />
     <Compile Include="api\PaymentHistoryController.cs" />
     <Compile Include="api\UserProfileController.cs" />
     <Compile Include="api\WrioLangController.cs" />
@@ -250,7 +236,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\PayPalController.cs" />
-    <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\LoginServiceController.cs" />
     <Compile Include="Controllers\TitterController.cs" />
     <Compile Include="Extensions\CustomApiController.cs" />
     <Compile Include="Extensions\CustomControllerBase.cs" />
@@ -263,7 +249,6 @@
     <Compile Include="Models\AddFundsModel.cs" />
     <Compile Include="Models\Admin\TransactionCollectionModel.cs" />
     <Compile Include="Models\DeleteAccountModel.cs" />
-    <Compile Include="Models\Login\UserLoginModel.cs" />
     <Compile Include="Models\PayPalResultModel.cs" />
     <Compile Include="Models\ProfileCollectionModel.cs" />
     <Compile Include="Models\ProfileModel.cs" />
@@ -326,6 +311,7 @@
     <Content Include="vertical\controllers\InvitationController.js" />
     <Content Include="vertical\controllers\InviteController.js" />
     <Content Include="vertical\controllers\LoginController.js" />
+    <Content Include="vertical\controllers\LoginInController.js" />
     <Content Include="vertical\controllers\PlusController.js" />
     <Content Include="vertical\controllers\PostController.js" />
     <Content Include="vertical\controllers\ProfileController.js" />
@@ -396,6 +382,7 @@
     <Content Include="vertical\img\plus-slide1.jpg" />
     <Content Include="vertical\img\profile-ia.png" />
     <Content Include="vertical\img\profile1.jpg" />
+    <Content Include="vertical\img\sign_in-cover.jpg" />
     <Content Include="vertical\img\sign_in-cover1.jpg" />
     <Content Include="vertical\img\sign_in-cover2.jpg" />
     <Content Include="vertical\img\sign_in-cover3.jpg" />
@@ -475,7 +462,9 @@
     <Content Include="vertical\services\ComposeService.js" />
     <Content Include="vertical\services\EmailService.js" />
     <Content Include="vertical\services\FacebookService.js" />
+    <Content Include="vertical\services\IframelyServices.js" />
     <Content Include="vertical\services\LanguageService.js" />
+    <Content Include="vertical\services\LoginInService.js" />
     <Content Include="vertical\services\LoginService.js" />
     <Content Include="vertical\services\PaginationService.js" />
     <Content Include="vertical\services\PostsService.js" />
@@ -518,6 +507,9 @@
     <Content Include="vertical\views\login\center-view.html" />
     <Content Include="vertical\views\login\left-view.html" />
     <Content Include="vertical\views\login\right-view.html" />
+    <Content Include="vertical\views\login_in\center-view.html" />
+    <Content Include="vertical\views\login_in\left-view.html" />
+    <Content Include="vertical\views\login_in\right-view.html" />
     <Content Include="vertical\views\plus\center-view.html" />
     <Content Include="vertical\views\plus\right-view.html" />
     <Content Include="vertical\views\post\center-view.html" />
@@ -605,10 +597,10 @@
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>1323</DevelopmentServerPort>
+          <AutoAssignPort>False</AutoAssignPort>
+          <DevelopmentServerPort>54040</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:1323/</IISUrl>
+          <IISUrl>http://localhost:54040/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
