Productionizing: Precompiled JSX

--- a/package.json
+++ b/package.json
@@ -8,31 +8,39 @@
     "node": ">= v0.8.0"
   },
   "devDependencies": {
-    "express": "4.9.4",
-    "media-typer": "*",
-    "qs": "*",
-    "etag": "*",
-    "on-finished": "*",
-    "proxy-addr": "*",
-    "ms": "*",
+    "aws-sdk-apis": "*",
+    "body-parser": "*",
+    "browserify": "^10.2.1",
+    "browserify-notify": "^1.1.2",
+    "debug": "*",
     "depd": "*",
     "destroy": "*",
+    "etag": "*",
+    "express": "4.9.4",
     "finalhandler": "*",
-    "utils-merge": "*",
-    "debug": "*",
-    "body-parser": "*",
-    "when": "~3.1.0",
     "http": "~0.0",
-    "mysql": "~2.5",
     "jade": "1.7",
-    "xmlbuilder": "*",
-    "xml2js": "*",
+    "media-typer": "*",
+    "ms": "*",
+    "mysql": "~2.5",
     "nconf": "*",
-    "aws-sdk-apis": "*",
+    "on-finished": "*",
+    "proxy-addr": "*",
+    "qs": "*",
+    "react-tools": "^0.13.3",
+    "reactify": "^1.1.1",
     "supervisor": "*",
-    "react-tools": "^0.13.3"
+    "uglifyify": "^3.0.1",
+    "utils-merge": "*",
+    "watchify": "^3.2.1",
+    "when": "~3.1.0",
+    "xml2js": "*",
+    "xmlbuilder": "*"
   },
   "scripts": {
-    "start": "mkdir tmp && jsx -x jsx . tmp WRIO && rm -rf tmp .module-cache"
+    "build": "browserify -t reactify -t uglifyify WRIO.jsx -o createdom.js",
+    "check": "mkdir tmp && jsx -x jsx . tmp WRIO && rm -rf tmp .module-cache",
+    "start": "npm run check && npm run build",
+    "watch": "watchify -p browserify-notify -t reactify WRIO.jsx -o createdom.js -d"
   }
 }
