Add module bluebird for support Promise in client.js

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jquery": "$"
   },
   "dependencies": {
+    "bluebird": "^2.9.26",
     "domready": "^1.0.8",
     "moment": "^2.10.3",
     "react": "^0.13.3",
