Add storages, components to separate folderes & fixing some react (client)(server) warnings

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "moment": "^2.10.3",
     "npm": "^2.10.1",
     "react": "^0.13.3",
-    "react-script-loader": "git://github.com/yariv/ReactScriptLoader"
+    "react-script-loader": "git://github.com/yariv/ReactScriptLoader",
+    "reflux": "^0.2.7"
   }
 }
