Add bin key to package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "WRIO-InternetOS",
   "version": "1.0.0",
-  "bin" : {
-    "WRIO-InternetOS" : "./bin.js"
-  },
+  "bin" : "./bin/WRIO-InternetOS",
   "description": "https://github.com/webRunes/WRIO-InternetOS/",
   "private": true,
   "repository": "https://github.com/webRunes/WRIO-InternetOS.git",
