--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "https://github.com/webRunes/WRIO-InternetOS/",
   "private": true,
   "repository": "https://github.com/webRunes/WRIO-InternetOS.git",
-  "main": "lib/wrio.js",
+  "main": "Main.jsx",
   "engines": {
     "node": ">= v0.8.0"
   },
@@ -44,22 +44,22 @@
     "jquery": "$"
   },
   "dependencies": {
-    "watchify": "^3.2.1",
-    "uglifyify": "^3.0.1",
+    "bluebird": "^2.9.26",
     "browserify": "^10.2.1",
     "browserify-notify": "^1.1.2",
     "browserify-shim": "^3.8.7",
+    "domready": "^1.0.8",
     "envify": "^3.4.0",
     "gulp": "^3.8.11",
     "gulp-download": "0.0.1",
-    "react-tools": "^0.13.3",
-    "reactify": "^1.1.1",
-    "bluebird": "^2.9.26",
-    "domready": "^1.0.8",
     "moment": "^2.10.3",
     "npm": "^2.10.1",
     "react": "^0.13.3",
     "react-script-loader": "git://github.com/yariv/ReactScriptLoader",
-    "reflux": "^0.2.7"
+    "react-tools": "^0.13.3",
+    "reactify": "^1.1.1",
+    "reflux": "^0.2.7",
+    "uglifyify": "^3.0.1",
+    "watchify": "^3.2.1"
   }
 }
