--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "reactify": "^1.1.1",
     "reflux": "^0.2.7",
     "uglifyify": "^3.0.1",
-    "watchify": "^3.2.1"
+    "watchify": "^3.2.1",
+    "login": "git+https://git@github.com/webRunes/Login-WRIO-App.git"
   }
 }
