--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ script: "/bin/date"
 node_js:
   - 0.10
 
+before_install: sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
+
 install : npm install
 script  : npm start
 
