--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "domready": "^1.0.8",
     "envify": "^3.4.0",
     "gulp": "^3.8.11",
+    "lodash.sortby": "^3.1.4",
     "npm": "^2.10.1",
     "passport-signin": "git+https://git@github.com/webRunes/Login-WRIO-App.git",
     "plus": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
