--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "WRIO-InternetOS",
   "version": "1.0.0",
-  "bin": "./bin/WRIO-InternetOS",
+  "bin": "./WRIO-InternetOS/bin/WRIO-InternetOS",
   "description": "https://github.com/webRunes/WRIO-InternetOS/",
   "private": true,
   "repository": "https://github.com/webRunes/WRIO-InternetOS.git",
-  "main": "main.jsx",
+  "main": "WRIO-InternetOS/main.jsx",
   "engines": {
     "node": ">= v0.8.0"
   },
@@ -35,12 +35,13 @@
   },
   "scripts": {
     "postinstall": "rm -rf node_modules/react-tools && cd node_modules && git clone https://github.com/facebook/react react-tools && cd react-tools && git reset --hard 128390a691f790b8003c7abd42560f0025e40c79 && npm i && npm run build && cd build/npm-react && npm link && cd ../../../.. && npm link react",
-    "start": "npm run bundleP && gulp clear",
-    "bundleP": "browserify -g [envify --NODE_ENV production] -t reactify -g uglifyify main.jsx -o WRIO.js",
-    "bundleD": "browserify -g [envify --NODE_ENV development] -t reactify main.jsx -o WRIO.js -d",
-    "build": "npm run bundleD",
+    "start": "npm run bundleP && gulp copy clear",
+    "bundleP": "browserify -g [envify --NODE_ENV production] -t reactify -g uglifyify WRIO-InternetOS/main.jsx -o WRIO-InternetOS/start.js",
+    "bundleD": "browserify -g [envify --NODE_ENV development] -t reactify WRIO-InternetOS/main.jsx -o WRIO-InternetOS/start.js -d",
+    "build": "npm run bundleD && gulp copy",
     "w": "npm run watch",
-    "watch": "watchify -p browserify-notify -g [envify --NODE_ENV development] -t reactify main.jsx -o WRIO.js -d"
+    "watch": "onchange WRIO-InternetOS/start.js -- gulp copy & npm run watchify",
+    "watchify": "watchify -p browserify-notify -g [envify --NODE_ENV development] -t reactify WRIO-InternetOS/main.jsx -o WRIO-InternetOS/start.js -d"
   },
   "dependencies": {
     "bluebird": "^2.9.26",
@@ -51,10 +52,12 @@
     "gulp": "^3.8.11",
     "lodash.sortby": "^3.1.4",
     "npm": "^2.10.1",
+    "onchange": "^1.1.0",
     "passport-signin": "git+https://git@github.com/webRunes/Login-WRIO-App.git",
     "plus": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
     "reactify": "^1.1.1",
     "reflux": "0.2.7",
+    "showdown": "^1.1.0",
     "superagent": "^1.2.0",
     "titter-wrio-app": "git+https://git@github.com/webRunes/Titter-WRIO-App.git",
     "uglifyify": "^3.0.1",
