--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "aws-sdk-apis": "*",
-    "body-parser": "*",
     "babel": "^5.6.14",
     "babelify": "^6.1.2",
+    "body-parser": "*",
     "debug": "*",
     "depd": "*",
     "destroy": "*",
@@ -23,6 +23,7 @@
     "etag": "*",
     "express": "4.9.4",
     "finalhandler": "*",
+    "gulp-shell": "^0.4.3",
     "http": "~0.0",
     "jade": "1.7",
     "media-typer": "*",
@@ -34,10 +35,10 @@
     "qs": "*",
     "supervisor": "*",
     "utils-merge": "*",
+    "vinyl-source-stream": "^1.1.0",
     "when": "~3.1.0",
     "xml2js": "*",
-    "xmlbuilder": "*",
-    "vinyl-source-stream": "^1.1.0"
+    "xmlbuilder": "*"
   },
   "browserify": {
     "transform": [
@@ -52,7 +53,6 @@
     "w": "npm run watch",
     "lint": "eslint WRIO-InternetOS",
     "watch": "gulp watch",
-
     "bundleDOCKER": "gulp --docker",
     "watchDOCKER": "gulp watch --docker"
   },
@@ -69,17 +69,22 @@
     "lodash.sortby": "^3.1.4",
     "npm": "^2.10.1",
     "onchange": "^1.1.0",
-    "passport-signin": "git+https://git@github.com/webRunes/Login-WRIO-App.git",
-    "plus": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
+    "passport-signin": "file:../Login-WRIO-App.git",
+    "plus": "file:../Plus-WRIO-App.git",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.2",
     "reactify": "^1.1.1",
     "reflux": "0.2.7",
     "showdown": "^1.1.0",
     "superagent": "^1.2.0",
-    "titter-wrio-app": "git+https://git@github.com/webRunes/Titter-WRIO-App.git",
+    "titter-wrio-app": "file:../Titter-WRIO-App.git",
     "uglifyify": "^3.0.1",
     "watchify": "^3.2.1",
     "yargs": "^3.23.0"
+  },
+  "optionalDependencies": {
+    "passport-signin": "git+https://git@github.com/webRunes/Login-WRIO-App.git",
+    "plus": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
+    "titter-wrio-app": "git+https://git@github.com/webRunes/Titter-WRIO-App.git"
   }
 }
