Local dev fixes

--- a/package.json
+++ b/package.json
@@ -61,30 +61,27 @@
     "browserify-notify": "^1.1.2",
     "domready": "^1.0.8",
     "envify": "^3.4.0",
+    "es6-promise": "^3.0.2",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
     "gulp-nodemon": "^2.0.3",
+    "gulp-notify": "^2.2.0",
     "lodash": "^3.10.1",
     "lodash.sortby": "^3.1.4",
+    "login-wrio-app": "git+https://git@github.com/webRunes/Login-WRIO-App.git",
     "npm": "^2.10.1",
     "onchange": "^1.1.0",
-    "passport-signin": "file:../Login-WRIO-App.git",
-    "plus": "file:../Plus-WRIO-App.git",
+    "plus-wrio-app": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.2",
     "reactify": "^1.1.1",
     "reflux": "0.2.7",
     "showdown": "^1.1.0",
     "superagent": "^1.2.0",
-    "titter-wrio-app": "file:../Titter-WRIO-App.git",
+    "titter-wrio-app": "git+https://git@github.com/webRunes/Titter-WRIO-App.git",
     "uglifyify": "^3.0.1",
     "watchify": "^3.2.1",
     "yargs": "^3.23.0"
-  },
-  "optionalDependencies": {
-    "passport-signin": "git+https://git@github.com/webRunes/Login-WRIO-App.git",
-    "plus": "git+https://git@github.com/webRunes/Plus-WRIO-App.git",
-    "titter-wrio-app": "git+https://git@github.com/webRunes/Titter-WRIO-App.git"
   }
 }
