--- a/WRIO-InternetOS/.eslintrc
+++ b/WRIO-InternetOS/.eslintrc
@@ -15,7 +15,7 @@
         "max-len": [1, 1110, 4],
         "vars-on-top": 0,
         "guard-for-in": 1,
-        "react/jsx-quotes": [2, "double", "avoid-escape"],
+        "jsx-quotes": [2, "prefer-double"],
         "react/jsx-no-undef": 2,
         "react/jsx-sort-props": 0,
         "react/jsx-uses-react": 1,
@@ -29,7 +29,6 @@
         "react/self-closing-comp": 1,
         "react/wrap-multilines": 2
     },
-
     "ecmaFeatures": {
         "jsx": true
     },
