--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   },
   "browserify": {
     "transform": [
-      "reactify"
+      "reactify",
+      "envify",
+      "babelify"
     ]
   },
   "scripts": {
