--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "devDependencies": {
     "aws-sdk-apis": "*",
-    "babel": "^5.6.14",
-    "babelify": "^6.1.2",
+    "babel": "^5.8.23",
+    "babelify": "^6.3.0",
     "body-parser": "*",
     "debug": "*",
     "depd": "*",
@@ -59,6 +59,7 @@
     "watchDOCKER": "gulp watch --docker"
   },
   "dependencies": {
+    "babel-core": "^5.8.24",
     "browserify": "^10.2.4",
     "browserify-notify": "^1.1.2",
     "domready": "^1.0.8",
