--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "etag": "*",
     "express": "4.9.4",
     "finalhandler": "*",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.4.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
