--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ node_module/
 config.json
 .module-cache
 npm-debug.log
-./WRIO-InternetOS/start.js
-./WRIO-InternetOS/start.js.map
-/WRIO-InternetOS/raw
+./start.js
+./start.js.map
+./raw
