Fix travis mime-types bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ node_js:
 install : npm install
 script  : npm run build
 
+before_deploy:
+- gem install mime-types -v 2.6.2
+
 deploy:
   provider: s3
   access_key_id:
